--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "node-cron": "^3.0.3"
   }
