--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USER=insideth_chaitanya
 DB_PASSWORD=Zeta-v@123pune
 DB_HOST=md-in-10.webhostbox.net
-
+#  DB_HOST= 103.21.59.172, 
 DB_DATABASE=insideth_booking
 DB_PORT=3306 
 JWT_SECRET= mySuperSecretKey2025!
